--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,7 +19,10 @@ jobs:
         python-version: '3.12.2'
 
     - name: Instalar dependências
-      run: pip install pytest
+      run: pip install -r pytest
+
+    - name: Instalar dependências
+      run: pip install -r flask
       
     - name: Teste01
       run: pytest Codes/Teste1.py
